--- a/index.html
+++ b/index.html
@@ -107,25 +107,6 @@
                         "
                       ></p>
                     </div>
-
-                    <!-- <div class="container" style="padding-top: 140px">
-                      <h2 style="color: #ffffff; font-weight: 300">
-                        Digital Creative
-                      </h2>
-
-                      <p
-                        style="
-                          color: #ffffff;
-                          font-weight: 300;
-                          width: 500px;
-                          letter-spacing: -0.3px;
-                        "
-                      >
-                        Creatively transforming business objectives online to
-                        turn heads and get results. Moving the message forward
-                        in collaterals, signage, and promotional materials.
-                      </p>
-                    </div> -->
                   </div>
                 </div>
               </div>
@@ -336,10 +317,50 @@
               </div>
             </div>
           </div>
-          <div class="col-sm-6 col-md-4 mt-4">
-            <div class="thumbnail">
-              <div class="caption">
-                <h5 style="color: #0066d6"></h5>
+        </div>
+        <hr />
+        <div class="row" style="">
+          <div
+            class="col-sm-6 col-md-4 mt-4 d-inline-flex focus-ring text-decoration-none border rounded-2"
+            style="height: 30px"
+          >
+            <p style="text-decoration: underline">Request a Proposal</p>
+          </div>
+          <div class="col-sm-6 col-md-8" style="margin-bottom: 50px">
+            <div
+              style="
+                display: flex;
+                justify-content: center;
+                width: 750px;
+                gap: 20px;
+              "
+            >
+              <div>
+                <img
+                  class="hompage__group"
+                  src="/images/home/BootstrapsImages/HomePage/homepf-ari.jpg"
+                  alt="logo"
+                />
+              </div>
+              <div>
+                <h4>Carrera Races</h4>
+                <p style="width: 300px">
+                  Carrerra Races, Inc is a premier race company focusing on
+                  creating awareness and opportunity for nonprofit
+                  organizations.
+                </p>
+              </div>
+            </div>
+            <div class="container mt-5" style="">
+              <div class="row">
+                <div class="col d-flex justify-content-center">
+                  <div class="circle mx-1"></div>
+                  <div class="circle mx-1"></div>
+                  <div class="circle mx-1"></div>
+                  <div class="circle mx-1"></div>
+                  <div class="circle mx-1"></div>
+                  <div class="circle mx-1"></div>
+                </div>
               </div>
             </div>
           </div>
