--- a/index.html
+++ b/index.html
@@ -321,11 +321,12 @@
         <hr />
         <div class="row" style="">
           <div
-            class="col-sm-6 col-md-4 mt-4 d-inline-flex focus-ring text-decoration-none border rounded-2"
+            class="col-sm-6 col-md-4 mt-4 d-inline-flex focus-ring text-decoration-none border rounded-2 card"
             style="height: 30px"
           >
             <p style="text-decoration: underline">Request a Proposal</p>
           </div>
+
           <div class="col-sm-6 col-md-8" style="margin-bottom: 50px">
             <div
               style="
