--- a/index.html
+++ b/index.html
@@ -355,12 +355,12 @@
             <div class="container mt-5" style="">
               <div class="row">
                 <div class="col d-flex justify-content-center">
-                  <div class="circle mx-1"></div>
-                  <div class="circle mx-1"></div>
-                  <div class="circle mx-1"></div>
-                  <div class="circle mx-1"></div>
-                  <div class="circle mx-1"></div>
-                  <div class="circle mx-1"></div>
+                  <div class="circle_slider mx-1"></div>
+                  <div class="circle_slider mx-1"></div>
+                  <div class="circle_slider mx-1"></div>
+                  <div class="circle_slider mx-1"></div>
+                  <div class="circle_slider mx-1"></div>
+                  <div class="circle_slider mx-1"></div>
                 </div>
               </div>
             </div>
