--- a/index.html
+++ b/index.html
@@ -343,7 +343,7 @@
                   alt="logo"
                 />
               </div>
-              <div>
+              <div style="font-size: 14px; letter-spacing: -0.6px">
                 <h4>Carrera Races</h4>
                 <p style="width: 300px">
                   Carrerra Races, Inc is a premier race company focusing on
