--- a/index.html
+++ b/index.html
@@ -344,45 +344,6 @@
               </div>
             </div>
           </div>
-
-          <!-- <div class="col-sm-6 col-md-8" style="margin-bottom: 50px">
-            <div
-              style="
-                display: flex;
-                justify-content: center;
-                width: 750px;
-                gap: 20px;
-              "
-            >
-              <div>
-                <img
-                  class="hompage__group"
-                  src="/images/home/BootstrapsImages/HomePage/homepf-ari.jpg"
-                  alt="logo"
-                />
-              </div>
-              <div style="font-size: 14px; letter-spacing: -0.6px">
-                <h4>Carrera Races</h4>
-                <p style="width: 300px">
-                  Carrerra Races, Inc is a premier race company focusing on
-                  creating awareness and opportunity for nonprofit
-                  organizations.
-                </p>
-              </div>
-            </div>
-            <div class="container mt-5" style="">
-              <div class="row">
-                <div class="col d-flex justify-content-center">
-                  <div class="circle_slider mx-1"></div>
-                  <div class="circle_slider mx-1"></div>
-                  <div class="circle_slider mx-1"></div>
-                  <div class="circle_slider mx-1"></div>
-                  <div class="circle_slider mx-1"></div>
-                  <div class="circle_slider mx-1"></div>
-                </div>
-              </div>
-            </div>
-          </div> -->
         </div>
       </div>
       <!-- footer start  -->
@@ -682,33 +643,34 @@
       ];
 
       const sliderWrapper = document.querySelector(".slider-wrapper");
-      const circles = document.querySelectorAll(".circle");
+      const circles_ = document.querySelectorAll(".circle_slider");
       let index_slider = 0;
+      let isTransitioning = false;
 
       function createSliderItems() {
         sliderWrapper.innerHTML =
           bannerContent
             .map(
               (item) => `
-    <div class="slider-item">
-      <img src="${item.image}" alt="${item.title}">
-      <div>
-        <h4>${item.title}</h4>
-        <p>${item.content}</p>
-      </div>
-    </div>
-  `
+<div class="slider-item">
+  <img src="${item.image}" alt="${item.title}">
+  <div>
+    <h4>${item.title}</h4>
+    <p>${item.content}</p>
+  </div>
+</div>
+`
             )
             .join("") +
           `
-    <div class="slider-item">
-      <img src="${bannerContent[0].image}" alt="${bannerContent[0].title}">
-      <div>
-        <h4>${bannerContent[0].title}</h4>
-        <p>${bannerContent[0].content}</p>
-      </div>
-    </div>
-  `;
+<div class="slider-item">
+  <img src="${bannerContent[0].image}" alt="${bannerContent[0].title}">
+  <div>
+    <h4>${bannerContent[0].title}</h4>
+    <p>${bannerContent[0].content}</p>
+  </div>
+</div>
+`;
       }
 
       function startSlider() {
@@ -717,11 +679,14 @@
         const totalItems = bannerContent.length;
 
         setInterval(() => {
+          if (isTransitioning) return;
+
+          isTransitioning = true;
           index_slider++;
           sliderWrapper.style.transition = "transform 1s ease-in-out";
           sliderWrapper.style.transform = `translateX(-${index_slider * 100}%)`;
 
-          circles.forEach((circle, i) => {
+          circles_.forEach((circle, i) => {
             circle.classList.toggle("active", i === index_slider % totalItems);
           });
 
@@ -730,12 +695,94 @@
               sliderWrapper.style.transition = "none";
               sliderWrapper.style.transform = "translateX(0)";
               index_slider = 0;
+              circles_.forEach((circle, i) => {
+                circle.classList.toggle(
+                  "active",
+                  i === index_slider % totalItems
+                );
+              });
+              isTransitioning = false;
+            }, 1000);
+          } else {
+            setTimeout(() => {
+              isTransitioning = false;
             }, 1000);
           }
         }, 4000);
       }
 
+      function addDotClickHandlers() {
+        circles_.forEach((circle, i) => {
+          circle.addEventListener("click", () => {
+            index_slider = i;
+            sliderWrapper.style.transition = "transform 1s ease-in-out";
+            sliderWrapper.style.transform = `translateX(-${
+              index_slider * 100
+            }%)`;
+            circles_.forEach((c, idx) => {
+              c.classList.toggle("active", idx === index_slider);
+            });
+          });
+        });
+      }
+
       startSlider();
+      addDotClickHandlers();
+      //     const sliderWrapper = document.querySelector(".slider-wrapper");
+      //     const circles_ = document.querySelectorAll(".circle_slider");
+      //     let index_slider = 0;
+
+      //     function createSliderItems() {
+      //       sliderWrapper.innerHTML =
+      //         bannerContent
+      //           .map(
+      //             (item) => `
+      //   <div class="slider-item">
+      //     <img src="${item.image}" alt="${item.title}">
+      //     <div>
+      //       <h4>${item.title}</h4>
+      //       <p>${item.content}</p>
+      //     </div>
+      //   </div>
+      // `
+      //           )
+      //           .join("") +
+      //         `
+      //   <div class="slider-item">
+      //     <img src="${bannerContent[0].image}" alt="${bannerContent[0].title}">
+      //     <div>
+      //       <h4>${bannerContent[0].title}</h4>
+      //       <p>${bannerContent[0].content}</p>
+      //     </div>
+      //   </div>
+      // `;
+      //     }
+
+      //     function startSlider() {
+      //       createSliderItems();
+
+      //       const totalItems = bannerContent.length;
+
+      //       setInterval(() => {
+      //         index_slider++;
+      //         sliderWrapper.style.transition = "transform 1s ease-in-out";
+      //         sliderWrapper.style.transform = `translateX(-${index_slider * 100}%)`;
+
+      //         circles_.forEach((circle, i) => {
+      //           circle.classList.toggle("active", i === index_slider % totalItems);
+      //         });
+
+      //         if (index_slider === totalItems) {
+      //           setTimeout(() => {
+      //             sliderWrapper.style.transition = "none";
+      //             sliderWrapper.style.transform = "translateX(0)";
+      //             index_slider = 0;
+      //           }, 1000);
+      //         }
+      //       }, 4000);
+      //     }
+
+      //     startSlider();
 
       let currentIndex = 0;
 
