--- a/index.html
+++ b/index.html
@@ -319,7 +319,7 @@
           </div>
         </div>
         <hr />
-        <div class="row gap-10" style="">
+        <div class="row gap-10">
           <div
             class="col-sm-6 col-md-4 mt-4 d-inline-flex focus-ring text-decoration-none border rounded-2 card"
             style="height: 30px"
