--- a/index.html
+++ b/index.html
@@ -126,6 +126,8 @@
           </div>
         </div>
       </div>
+
+      <!-- -->
       <!-- Design and branding -->
 
       <div class="container">
@@ -728,84 +730,15 @@
 
       startSlider();
       addDotClickHandlers();
-      //     const sliderWrapper = document.querySelector(".slider-wrapper");
-      //     const circles_ = document.querySelectorAll(".circle_slider");
-      //     let index_slider = 0;
-
-      //     function createSliderItems() {
-      //       sliderWrapper.innerHTML =
-      //         bannerContent
-      //           .map(
-      //             (item) => `
-      //   <div class="slider-item">
-      //     <img src="${item.image}" alt="${item.title}">
-      //     <div>
-      //       <h4>${item.title}</h4>
-      //       <p>${item.content}</p>
-      //     </div>
-      //   </div>
-      // `
-      //           )
-      //           .join("") +
-      //         `
-      //   <div class="slider-item">
-      //     <img src="${bannerContent[0].image}" alt="${bannerContent[0].title}">
-      //     <div>
-      //       <h4>${bannerContent[0].title}</h4>
-      //       <p>${bannerContent[0].content}</p>
-      //     </div>
-      //   </div>
-      // `;
-      //     }
-
-      //     function startSlider() {
-      //       createSliderItems();
-
-      //       const totalItems = bannerContent.length;
-
-      //       setInterval(() => {
-      //         index_slider++;
-      //         sliderWrapper.style.transition = "transform 1s ease-in-out";
-      //         sliderWrapper.style.transform = `translateX(-${index_slider * 100}%)`;
-
-      //         circles_.forEach((circle, i) => {
-      //           circle.classList.toggle("active", i === index_slider % totalItems);
-      //         });
-
-      //         if (index_slider === totalItems) {
-      //           setTimeout(() => {
-      //             sliderWrapper.style.transition = "none";
-      //             sliderWrapper.style.transform = "translateX(0)";
-      //             index_slider = 0;
-      //           }, 1000);
-      //         }
-      //       }, 4000);
-      //     }
-
-      //     startSlider();
 
       let currentIndex = 0;
 
-      function highlightCircles() {
-        const circles = document.querySelectorAll(".circle");
-
-        circles.forEach((circle) => {
-          circle.classList.remove("highlighted");
-        });
-
-        circles[currentIndex].classList.add("highlighted");
-
-        currentIndex = (currentIndex + 1) % circles.length;
-      }
-
-      setInterval(highlightCircles, 5000);
-
-      let index = 0;
-
-      function changeContentAndBackground() {
+      function changeContentAndBackground(index = currentIndex) {
         const contentContainer = document.querySelector(".altairtech_content");
         const bgContainer = document.querySelector(".altairtech_group");
+        const circles = document.querySelectorAll(".circle");
 
+        // Fade out
         contentContainer.classList.add("fade-out");
         bgContainer.classList.add("fade-out");
 
@@ -815,17 +748,33 @@
 
           titleElement.textContent = content[index].title;
           contentElement.textContent = content[index].content;
-
           bgContainer.style.backgroundImage = `url(${images[index]})`;
 
           contentContainer.classList.remove("fade-out");
           bgContainer.classList.remove("fade-out");
 
-          index = (index + 1) % content.length;
-        }, 5000);
+          circles.forEach((circle, i) => {
+            circle.classList.toggle("highlighted", i === index);
+          });
+
+          currentIndex = (index + 1) % content.length;
+        }, 1000);
+      }
+
+      function addCircleClickEvent() {
+        const circles = document.querySelectorAll(".circle");
+
+        circles.forEach((circle, index) => {
+          circle.addEventListener("click", () => {
+            currentIndex = index;
+            changeContentAndBackground(index);
+          });
+        });
       }
 
       setInterval(changeContentAndBackground, 5000);
+
+      addCircleClickEvent();
 
       changeContentAndBackground();
     </script>
