--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
 
   <body>
     <div>
+      <!-- Navbar -->
       <div class="navbar-banner-container">
-        <!-- Navbar -->
         <nav class="navbar navbar-expand-lg navbar-dark">
           <div class="container">
             <a
@@ -47,7 +47,7 @@
                   <a
                     class="nav-link active"
                     aria-current="page"
-                    href="#"
+                    href="/altair.html"
                     style="width: 100px"
                     >Why Altair?</a
                   >
@@ -778,5 +778,10 @@
 
       changeContentAndBackground();
     </script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
