--- a/services.html
+++ b/services.html
@@ -1,81 +1,265 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+
+<head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Altairtech</title>
     <link href="./css/service.css" rel="stylesheet" />
 
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
-      crossorigin="anonymous"
-    />
-  </head>
-  <body>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous" />
+</head>
 
+<body>
     <div class="navbar-banner-container">
         <!--header start  -->
         <nav class="navbar navbar-expand-lg navbar-dark">
-          <div class="container">
-            <a
-              class="navbar-brand text-white fw-bold rodriguez__group"
-              href="/index.html"
-            >
-              <img
-                class="rodriguez__group"
-                src="./images/home/logo.png"
-                alt="logo"
-              />
-            </a>
-            <button
-              class="navbar-toggler"
-              type="button"
-              data-bs-toggle="collapse"
-              data-bs-target="#navbarNav"
-              aria-controls="navbarNav"
-              aria-expanded="false"
-              aria-label="Toggle navigation"
-            >
-              <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNav">
-              <ul class="navbar-nav ms-auto" style="z-index: 1">
-                <li class="nav-item">
-                  <a
-                    class="nav-link active"
-                    aria-current="page"
-                    href="/altair.html"
-                    style="width: 100px"
-                    >Why Altair?</a
-                  >
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="/services.html">Services</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="#">Products</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="#">Portfolio</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="#">About</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="#">Contact</a>
-                </li>
-              </ul>
+            <div class="container">
+                <a class="navbar-brand text-white fw-bold rodriguez__group" href="/index.html">
+                    <img class="rodriguez__group" src="./images/home/logo.png" alt="logo" />
+                </a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                    aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNav">
+                    <ul class="navbar-nav ms-auto" style="z-index: 1">
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="/altair.html" style="width: 100px">Why
+                                Altair?</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="/services.html">Services</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Products</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Portfolio</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">About</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Contact</a>
+                        </li>
+                    </ul>
+                </div>
             </div>
-          </div>
         </nav>
-      </div>
-      <!--header end  -->
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-      crossorigin="anonymous"
-    ></script>
-  </body>
+    </div>
+    <!--header end  -->
+    <!-- main start -->
+
+    <div class="container py-2">
+        <p style="font-size: 35px">Services</p>
+        <div>
+            <div class="row">
+                <div class="col-12 col-sm-6 col-md-2 mb-3">
+                    <div>
+                        <p class="card-title" style="margin-top: -5px; margin-bottom: -5px;">
+                            Websites.
+                        </p>
+                        <hr />
+                        <p class="card-title" style="margin-top: -5px; margin-bottom: -5px;">
+                            Marketing.
+                        </p>
+                        <hr />
+                        <p class="card-title" style="margin-top: -5px; margin-bottom: -5px;">
+                            TechSide.
+                        </p>
+                        <hr />
+                        <p class="card-title" style="margin-top: -5px; margin-bottom: -5px;">
+                            Planning.
+                        </p>
+                        <hr />
+                    </div>
+                </div>
+                <div class="col-12 col-md-8 mb-3">
+                    <div class="card shadow" style="padding-top: 10px; padding-bottom: 30px;">
+                        <div class="card-body">
+                            <h5 class="card-title">Websites.</h5>
+                            <hr />
+                            <h6 class="card-title">Website Design & Development.</h6>
+                            <p class="card-text">
+                                Altair Technology builds custom website platforms that propel your
+                                business goals and position you above your competition. Our digital
+                                creative wins awards but the true reward is our client's success, a
+                                direct result of collaboration.
+                            </p>
+                            <h6 class="card-title">Website content.</h6>
+                            <p class="card-text">
+                                A website's greatest strength is to present language compelling
+                                enough to get a click and a new sale. Altair will wordsmith your
+                                copy to persuasive perfection, or generate your copy from a blank
+                                canvas, at affordable rates.
+                            </p>
+                            <h6 class="card-title">Transparency.</h6>
+                            <p class="card-text">
+                                In an increasingly complex internet, transparency puts you in the
+                                driver's seat. You will see your website developing online via
+                                private link from day 1. Scheduled updates and open communications
+                                provide peace of mind while regular reports keep you informed. Some
+                                websites only require 3 weeks to complete; complex websites normally
+                                take 45 days.
+                            </p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-12 col-md-2">
+                    <div class="box mb-3">
+                        <div class="content">
+                            <h4>Contact Altair today to discuss your project.</h4>
+                            <p>Or request a free proposal.</p>
+                        </div>
+                    </div>
+                    <div class="content_para mb-3">
+                        <h4>Need new ideas for your website?</h4>
+                        <p>
+                            At Altair our true reward is your success. We will meet with you at no
+                            cost.
+                        </p>
+                    </div>
+                    <div class="content_para mb-3">
+                        <h4>Is your website underperforming?</h4>
+                        <p>Contact Altair today for a free assessment.</p>
+                    </div>
+                    <img src="/images/home/BootstrapsImages/alters/button-getnoticed02.png" class="img-fluid"
+                        alt="Responsive image" />
+                </div>
+            </div>
+        </div>
+
+
+
+    </div>
+    <footer class="footer">
+        <section class="py-10 py-md-5 py-xl-8 border-top border-light footer__css">
+            <div class="container overflow-hidden">
+                <div class="row gy-4 gy-lg-0 justify-content-xl-between">
+                    <div class="col-12 col-md-4 col-lg-3 col-xl-2">
+                        <div class="widget">
+                            <h4 class="widget-title mb-4" style="color: gray; font-size: 20px">
+                                Essentials
+                            </h4>
+                            <p style="margin-bottom: -2px">
+                                <a class="link-secondary text-decoration-none" style="font-size: 12px"
+                                    href="tel:+15057922430">Why Altair?</a>
+                            </p>
+                            <p style="margin-bottom: -2px">
+                                <a class="link-secondary text-decoration-none" style="font-size: 13px"
+                                    href="tel:+15057922430">Services</a>
+                            </p>
+                            <p style="margin-bottom: -2px">
+                                <a class="link-secondary text-decoration-none" style="font-size: 13px"
+                                    href="tel:+15057922430">Portfolio</a>
+                            </p>
+                            <p style="margin-bottom: -2px">
+                                <a class="link-secondary text-decoration-none" style="font-size: 13px"
+                                    href="tel:+15057922430">About</a>
+                            </p>
+                            <p style="margin-bottom: -2px">
+                                <a class="link-secondary text-decoration-none" style="font-size: 13px"
+                                    href="tel:+15057922430">Contact</a>
+                            </p>
+                            <p style="margin-bottom: -2px">
+                                <a class="link-secondary text-decoration-none" style="font-size: 13px"
+                                    href="tel:+15057922430">Careers</a>
+                            </p>
+                            <p style="margin-bottom: -2px">
+                                <a class="link-secondary text-decoration-none" style="font-size: 13px"
+                                    href="tel:+15057922430">Privacy Policy</a>
+                            </p>
+                        </div>
+                    </div>
+                    <div class="col-12 col-md-4 col-lg-3 col-xl-2">
+                        <div class="widget">
+                            <h4 class="widget-title mb-4" style="color: gray; font-size: 20px">
+                                Services
+                            </h4>
+                            <p style="margin-bottom: -2px">
+                                <a class="link-secondary text-decoration-none" style="font-size: 13px"
+                                    href="tel:+15057922430">Websites</a>
+                            </p>
+                            <p style="margin-bottom: -2px">
+                                <a class="link-secondary text-decoration-none" style="font-size: 13px"
+                                    href="tel:+15057922430">Get More</a>
+                            </p>
+                            <p style="margin-bottom: -2px">
+                                <a class="link-secondary text-decoration-none" style="font-size: 13px"
+                                    href="tel:+15057922430">Marketing</a>
+                            </p>
+                            <p style="margin-bottom: -2px">
+                                <a class="link-secondary text-decoration-none" style="font-size: 13px"
+                                    href="tel:+15057922430">TechSide</a>
+                            </p>
+                            <p style="margin-bottom: -2px">
+                                <a class="link-secondary text-decoration-none" style="font-size: 13px"
+                                    href="tel:+15057922430">Planning</a>
+                            </p>
+                            <p style="margin-bottom: -2px">
+                                <a class="link-secondary text-decoration-none" style="font-size: 13px"
+                                    href="tel:+15057922430">Client Login</a>
+                            </p>
+                        </div>
+                    </div>
+                    <div class="col-12 col-md-4 col-lg-3 col-xl-2">
+                        <div class="widget">
+                            <h4 class="widget-title mb-4" style="color: gray; font-size: 20px">
+                                Products
+                            </h4>
+                            <p style="margin-bottom: -2px">
+                                <a class="link-secondary text-decoration-none" style="font-size: 13px"
+                                    href="tel:+15057922430">Websites</a>
+                            </p>
+                            <p style="margin-bottom: -2px">
+                                <a class="link-secondary text-decoration-none" style="font-size: 13px"
+                                    href="tel:+15057922430">ACE</a>
+                            </p>
+                            <p style="margin-bottom: -2px">
+                                <a class="link-secondary text-decoration-none" style="font-size: 13px"
+                                    href="tel:+15057922430">Point of Sale</a>
+                            </p>
+                            <p style="margin-bottom: -2px">
+                                <a class="link-secondary text-decoration-none" style="font-size: 13px"
+                                    href="tel:+15057922430">Member Manager</a>
+                            </p>
+                            <p style="margin-bottom: -2px">
+                                <a class="link-secondary text-decoration-none" style="font-size: 13px"
+                                    href="tel:+15057922430">Online Learning</a>
+                            </p>
+                            <p style="margin-bottom: -2px">
+                                <a class="link-secondary text-decoration-none" style="font-size: 13px"
+                                    href="tel:+15057922430">Event Calendar</a>
+                            </p>
+                        </div>
+                    </div>
+                    <div class="col-12 col-md-4 col-lg-12 col-xl-6">
+                        <div class="widget">
+                            <p style="color: white; font-size: 13px">
+                                "I highly recommend Altair Technnology for any website design
+                                or software development. They will live up to any task, and
+                                more importantly, work for their clients with a level of
+                                respect, hard work and integrity that is very hardflkljnlnln
+                                to find."
+                            </p>
+                        </div>
+                    </div>
+                </div>
+                <p class="col-12 col-md-4 col-lg-3 col-xl-6 mt-4" style="font-size: 12px; color: white">
+                    Copyright © 1993-2024 Altair Technology, Inc. All Rights Reserved.
+                    Contact Us Designed, Developed, and Hosted by Altair Technology
+                    Altair Technology, Inc Powered by the Altair Commerce Engine
+                </p>
+            </div>
+        </section>
+    </footer>
+
+    <!-- main end -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+        crossorigin="anonymous"></script>
+</body>
+
 </html>
