do responsive on mobile view

--- a/aboutus.html
+++ b/aboutus.html
@@ -92,12 +92,14 @@
               padding: 10px 140px;
             "
           >
-            <img
-              src="/images/home/BootstrapsImages/about/aboutcorners01.png"
-              class="img-fluid"
-              alt="Responsive image"
-            />
-            <div class="col-sm-12 col-md-5" style="text-align: right">
+            <div class="d-none d-md-block">
+              <img
+                src="/images/home/BootstrapsImages/about/aboutcorners01.png"
+                class="img-fluid"
+                alt="Responsive image"
+              />
+            </div>
+            <div class="col-sm-12 col-md-5 text-md-left">
               <p>
                 Altair Technology was founded in 1993 with the goal of
                 empowering the small to mid-size enterprise with technologies
@@ -119,8 +121,9 @@
                 support role that makes the most sense for your company.
               </p>
             </div>
+
             <div
-              class="col-sm-none col-md-1"
+              class="d-none d-md-block col-md-1"
               style="margin-top: -190px; margin-left: 30px; opacity: 0.4"
             >
               <img
@@ -129,6 +132,7 @@
                 alt="Responsive image"
               />
             </div>
+
             <div class="col-sm-12 col-md-5">
               <p>
                 Experienced staff can manage your applications and networks
@@ -151,11 +155,13 @@
                 us for your consultation.
               </p>
             </div>
-            <img
-              src="/images/home/BootstrapsImages/about/aboutcorners02.png"
-              class="img-fluid"
-              alt="Responsive image"
-            />
+            <div class="d-none d-md-block">
+              <img
+                src="/images/home/BootstrapsImages/about/aboutcorners02.png"
+                class="img-fluid"
+                alt="Responsive image"
+              />
+            </div>
           </div>
         </div>
       </div>
