--- a/altair.html
+++ b/altair.html
@@ -64,7 +64,7 @@
                 <a class="nav-link" href="/aboutus.html">About</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Contact</a>
+                <a class="nav-link" href="/contactus.html">Contact</a>
               </li>
             </ul>
           </div>
