--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                   <a class="nav-link" href="/aboutus.html">About</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="#">Contact</a>
+                  <a class="nav-link" href="/contactus.html">Contact</a>
                 </li>
               </ul>
             </div>
