--- a/altair.html
+++ b/altair.html
@@ -44,7 +44,7 @@
             <ul class="navbar-nav ms-auto" style="z-index: 1">
               <li class="nav-item">
                 <a
-                  class="nav-link active"
+                  class="nav-link"
                   aria-current="page"
                   href="/altair.html"
                   style="width: 100px"
