--- a/services.html
+++ b/services.html
@@ -26,7 +26,7 @@
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav ms-auto" style="z-index: 1">
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="/altair.html" style="width: 100px">Why
+                            <a class="nav-link" aria-current="page" href="/altair.html" style="width: 100px">Why
                                 Altair?</a>
                         </li>
                         <li class="nav-item">
