remove code on mobile view

--- a/index.html
+++ b/index.html
@@ -114,7 +114,10 @@
           </div>
         </section>
       </div>
-      <div class="container mt-5" style="position: absolute; top: 260px">
+      <div
+        class="container mt-5 d-none d-md-block"
+        style="position: absolute; top: 260px"
+      >
         <div class="row">
           <div class="col d-flex justify-content-center">
             <div class="circle mx-1"></div>
